[package]
name = "network"
version = "6.5.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = { version = "1.0", features = ["gzip"] }
clap = { version = "3.1", features = ["derive"] }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
tonic = "0.5"
prost = "0.8"
backtrace = "0.3"

cloud-util = "0.3.0"
cita_cloud_proto = "=6.5.0"
status_code = { package = "cloud-code", version = "0.3.0" }

tentacle = { git = "https://github.com/Pencil-Yao/tentacle", branch = "smx-update", features = ["tls"] }
tokio = { version = "1.17", features = ["sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-rustls = { git = "https://github.com/Pencil-Yao/tls", branch = "smx" }
crossbeam-channel = "0.5"
bytes = "1.0"
parking_lot = "0.12"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

